Fix reading multi-valued CSS attributes on IE.
This is also a test for Dean Edwards' trick described in
http://erik.eae.net/archives/2007/07/27/18.54.15/#comment-102291
and introduced to core in 3abf31.

--- a/test/data/testsuite.css
+++ b/test/data/testsuite.css
@@ -103,3 +103,5 @@ div.chain.out { background: green; }
 div.chain.out div { background: red; display: none; }
 
 div#show-tests * { display: none; }
+
+.padding { padding: 0 0 10px 15px }
